[FLINK-25537] [JUnit5 Migration] Module: flink-core